# midi2hid

./: CMakeLists.txt  README.md  init.sh  my_report_desc
scripts/: am335x_evm.sh  init.sh
src/: midi-listen.c  midi2hid.c  test.c  test_gadget.c
